<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">GTS Pro</string>

    <string name="role_supervisor">"Супервайзер"</string>
    <string name="role_supervisor_short">"СВ"</string>

    <string name="role_merchandiser">"Мерчендайзер"</string>
    <string name="role_merchandiser_short">"МЕ"</string>

    <string name="role_unknown">"?"</string>

    <string name="empty">""</string>
    <string name="error">"Ошибка"</string>
    <string name="update">Обновить</string>
    <string name="dialog_progress_default">Пожалуйста, подождите…</string>
    <string name="internet_error_title">Ошибка загрузки</string>
    <string name="internet_error_message">Пожалуйста, попробуйте ещё раз</string>
    <string name="unknown_server_error_title">Неизвестная ошибка сервера</string>
    <string name="unknown_error_title">Неизвестная ошибка</string>
    <string name="action_search">Поиск</string>
    <string name="merchandiser_text_name">me</string>
    <string name="supervisor_text_name">sv</string>
    <string name="ru_text_tag">ru</string>
    <string name="en_text_tag">en</string>
    <string name="exit_text_tag">Выйти</string>
    <string name="title_activity_trade_point">TradePointActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="claims_text_teg">Нераспределенные притензии</string>
    <string name="login_enter">Войти</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="check_password_is_correct">Проверьте правильность ввода пароля</string>
    <string name="check_user_name_is_correct">Проверьте правильность ввода логина</string>
    <string name="close_text_teg">Закрыть</string>
    <string name="sorting_teg_text">Сортировка по:</string>
    <string name="by_visit_time">По времени посещения</string>
    <string name="by_distance">Подистанции</string>
    <string name="alphabetically">По алфавиту</string>
    <string name="detailed_information_text_tag">Подробная информация:</string>
    <string name="run_text_teg">Приступить</string>
    <string name="claims_quantity_text_teg">Претензии</string>
    <string name="photo_report_text_teg">Фотоотчет</string>
    <string name="promotions_text_teg">Промо акции</string>
    <string name="report_text_teg">Отчет</string>
    <string name="error_message_text_info">Чтобы приступить к заданию вы должны быть в периметре 500м</string>
    <string name="task_list_text_info">Список задач:</string>
    <string name="go_to">Продолжить</string>
    <string name="repeat">Повторить</string>
    <string name="cancel">Отмена</string>
    <string name="exit">Выход</string>
    <string name="no_internet_dialog_content">Проверьте правильность настройки сети Интернет и попробуйте еще раз.</string>
    <string name="schedule_text_tad">Время визита по графику:</string>
    <string name="list_of_attached_merchandisers_text_tag">Список мерчендайзеров</string>
    <string name="schedule_de_facto_text_tad">Фактическое время визита:</string>
    <string name="action_logout">Выход</string>
    <string name="label_claims">Претензии</string>
    <string name="label_clients">Клиенты:</string>
    <string name="label_author">Автор:</string>
    <string name="label_promo_author">Сейчас выполняет:</string>
    <string name="label_period">Период проведения:</string>
    <string name="label_promo">Промо</string>
    <string name="label_photo_report">Фотоотчёт</string>
    <string name="label_report">Отчёт</string>
    <string name="label_sku">SKU</string>
    <string name="label_planogram">Планограмма</string>
    <string name="label_hot_line">Горячая линия</string>
    <string name="label_statistics">Статистика</string>
    <string name="label_verbose_info">Подробная информация:</string>
    <string name="label_promo_description">Подробное описание:</string>
    <string name="label_promo_sku">SKU:</string>
    <string name="label_date_start">Дата создания:</string>
    <string name="label_date_end">Дата выполнения:</string>
    <string name="label_from">c %1$s</string>
    <string name="label_to">до %1$s</string>
    <string name="label_filter_title">Фильтр по:</string>
    <string name="label_nuber">Номер:</string>
    <string name="label_claim_type">Тип претензии:</string>
    <string name="label_message_claim">Текст обращения:</string>
    <string name="label_chat_claim">Чат</string>
    <string name="label_assign_claim">Назначить</string>
    <string name="label_claim_photo">Фотоснимки:</string>
    <string name="label_run_now">Сейчас выполняет:</string>
    <string name="formOrReport">Анкета</string>
    <string name="filled_in_with">Заполнено на:</string>
    <string name="now_perform">Сейчас  выполняет:</string>
    <string name="create_date">Дата создания</string>
    <string name="finish_date">Дата выполнения</string>
    <string name="from">c</string>
    <string name="to">до</string>
    <string name="select_date">Выберите дату</string>
    <string name="type_messege_hotline_teg">Тип сообщения</string>
    <string name="sku_choice_text_teg">Выбор SKU</string>
    <string name="сauses_choice_text_teg">Выбор причины</string>
    <string name="situation_choice_text_teg">Выбор ситуации</string>
    <string name="quantity_goods_text_teg">Введите кол-во товара</string>
    <string name="manufacturer_selection_text_teg">Выбор производителя</string>
    <string name="form">Анкета</string>
    <string name="description">Описание:</string>
    <string name="wanted">Внимание</string>
    <string name="dialog_photo_permission_message">Для добавления фото, на Вашем устройстве, необходимо включить разрешения \"Камера\" и \"Память\" в настройках приложения</string>
    <string name="ok">OK</string>

    <plurals name="question_plurals">
        <item quantity="zero">Вопросов</item>
        <item quantity="one">Вопрос</item>
        <item quantity="two">Вопроса</item>
        <item quantity="few">Вопроса</item>
        <item quantity="many">Вопросов</item>
        <item quantity="other">Вопросов</item>
    </plurals>

</resources>