<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/navigationHeader"
                layout="@layout/header_drawer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/ruBottomNavigationView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/navigationHeader"
                android:layout_marginEnd="64dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="157dp"
                android:background="@drawable/blue_background"
                android:text="@string/ru_text_tag" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/enBottomNavigationView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ruBottomNavigationView"
                android:layout_marginEnd="64dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/white_background"
                android:text="@string/en_text_tag" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/exitTextBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="bottom"
                android:layout_marginBottom="40dp"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_exit"
                android:drawablePadding="16dp"
                android:drawableRight="@drawable/ic_exit"
                android:focusable="true"
                android:padding="5dp"
                android:text="@string/exit_text_tag"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </RelativeLayout>

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>