<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        style="@style/MullerMedium16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_verbose_info"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Подробная информация:"/>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="59dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cvRoot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="217dp">


            <TextView
                android:id="@+id/tvClients"
                style="@style/MullerRegular14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/label_nuber_claim"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Номер: 05255"/>

            <TextView
                android:id="@+id/tvAuthor"
                style="@style/MullerRegular14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="Автор:"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvClients"
                tools:text="Автор: Шаляпин В.Р."/>


            <TextView
                android:id="@+id/tvDateStart"
                style="@style/MullerRegular14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_date_start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAuthor"
                tools:text="Дата создания: 16/09/2018"/>

            <TextView
                android:id="@+id/tvDateFinish"
                style="@style/MullerRegular14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_date_end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDateStart"
                tools:text="Дата выполнения: 19/09/2018"/>

            <TextView
                android:id="@+id/tvClaimType"
                style="@style/MullerRegular14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_claim_type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDateFinish"
                tools:text = "Тип претензии: нарушена планограмма ментосов"
                />


            <TextView
                android:id="@+id/tvClaimMessage"
                style="@style/MullerRegular14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_message_claim"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvClaimType"
                tools:text="Текст обращения: Ватки «Я сама», «Сто умелых ручек»
раставлены не по планограмме"
                />

        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/tvPhotoTitle"
        style="@style/MullerMedium16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_claim_photo"
        tools:text="Фотоснимки:"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="24dp" />

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@id/tvPhotoTitle"
        app:layout_constraintTop_toBottomOf="@id/tvPhotoTitle"
        android:src="@drawable/photo1"
        />

    <ImageView
        android:id="@+id/ivPhoto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@id/ivPhoto"
        app:layout_constraintTop_toBottomOf="@id/tvPhotoTitle"
        android:src="@drawable/photo2"
        android:layout_marginLeft="16dp" />

    <ImageView
        android:id="@+id/ivPhoto3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@id/ivPhoto2"
        app:layout_constraintTop_toBottomOf="@id/tvPhotoTitle"
        android:src="@drawable/photo1"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/tvHint"
        style="@style/MullerBold12"
        android:alpha=".5"
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ivPhoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        tools:text="Чтобы приступить к заданию вы
должны быть в периметре 500м"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnAssign"
        style="@style/MullerBold10"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_btn_round_red"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:text="@string/label_assign_claim"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnChat"
        app:layout_constraintTop_toBottomOf="@+id/tvHint"
        />



    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnChat"
        app:layout_constraintHorizontal_chainStyle="packed"
        style="@style/MullerBold12"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_btn_round6"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:text="@string/label_chat_claim"
        android:textColor="@color/white"

        app:layout_constraintStart_toEndOf="@id/btnAssign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHint"
        />


</android.support.constraint.ConstraintLayout>