<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="end">

    <include
        layout="@layout/app_bar_trade_point"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="319dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/layoutHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="@color/white_two"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="80dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="32dp"
                    android:paddingEnd="14dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="14dp"
                    android:paddingStart="30dp"
                    android:paddingTop="32dp">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/avatarImageNavigationView"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="24dp"
                        android:layout_marginRight="24dp"
                        android:background="@drawable/ic_blue_circle"
                        android:gravity="center"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="28sp"
                        tools:text="me"/>

                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/avatarImageNavigationView"
                        android:layout_toRightOf="@+id/avatarImageNavigationView"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/nameTextNavigationView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="4dp"
                            android:paddingTop="4dp"
                            android:textColor="@color/black_three"
                            android:textSize="17sp"
                            tools:text="Генадий Викторович"/>

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/statusTextNavigationView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:alpha="0.5"
                            android:paddingBottom="4dp"
                            android:paddingTop="4dp"
                            android:textColor="@color/black_three"
                            android:textSize="15sp"
                            tools:text="Мерчендайзер"/>

                    </android.support.v7.widget.LinearLayoutCompat>

                </RelativeLayout>

            </android.support.v7.widget.LinearLayoutCompat>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/layoutHeader"
                android:background="@color/white">

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="29dp"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/buttonLanguageRu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:minHeight="64dp"
                        android:minWidth="196dp"
                        android:text="@string/ru_text_tag"
                        android:textSize="20sp"/>

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/buttonLanguageEn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:minHeight="64dp"
                        android:minWidth="196dp"
                        android:text="@string/en_text_tag"
                        android:textSize="20sp"/>

                </android.support.v7.widget.LinearLayoutCompat>

                <ru.panmin.gtspro.ui.customviews.VectorsSupportTextView
                    android:id="@+id/exitTextBottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="28dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:drawablePadding="16dp"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/exit_text_tag"
                    android:textColor="@color/black_three"
                    android:textSize="17sp"
                    app:drawableRightCompat="@drawable/ic_exit"/>

            </FrameLayout>

        </RelativeLayout>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>